# opentf

./: ChangeLog  ClientDifferences.md  CodeSamples.md  GuiNotes.md  HowToBuild.md  INSTALL  Makefile  NEWS  Namespaces.md  ProjectHome.md  README  ReleaseNotes.md  TfsBot.md  UnitTests.md  WebServices.md  configure  configure.in  opentf.sln  tfs.mdp  tfs.mds  tfs.nsi  tfs.spec.in
trunk/: ChangeLog  INSTALL  Makefile  NEWS  README  config.status  configure  configure.in  opentf.sln  tfs.nsi  tfs.spec.in
trunk/class/: ChangeLog
trunk/class/Gtk.TeamFoundation/: ChangesetDiffView.cs  ChangesetView.cs  DirectoryView.cs  ExploreView.cs  FileView.cs  GetLatestEventArgs.cs  GetLatestEventHandler.cs  Gtk.TeamFoundation.csproj  IVersionControlServerFactory.cs  Images.cs  Makefile  RepositoryMenu.cs  ShowChangesetEventArgs.cs  ShowFileDialog.cs  ShowFileEventHandler.cs  SortableColumns.cs  SourceView.cs  TreeViewBase.cs
trunk/class/Microsoft.TeamFoundation/: Makefile  Microsoft.TeamFoundation.csproj
trunk/class/Microsoft.TeamFoundation.Client/: AssemblyInfo.cs  Authenticator.cs  CommonStructureService.cs  GroupSecurityService.cs  Makefile  Microsoft.TeamFoundation.Client.csproj  Microsoft.TeamFoundation.Client.dll.sources  TeamFoundationServer.cs
trunk/class/Microsoft.TeamFoundation.Common/: AssemblyInfo.cs  Makefile  Microsoft.TeamFoundation.Common.csproj  Microsoft.TeamFoundation.Common.dll.sources
trunk/class/Microsoft.TeamFoundation.VersionControl.Client/: AssemblyInfo.cs  ChangeRequest.cs  Changeset.cs  DifferenceUtil.cs  GetRequest.cs  InternalUploadFile.cs  LockLevel.cs  Makefile  Microsoft.TeamFoundation.VersionControl.Client.csproj  Microsoft.TeamFoundation.VersionControl.Client.dll.sources  Repository.cs  Shelveset.cs  VersionControlServer.cs  Workspace.cs  Workstation.cs
trunk/class/Microsoft.TeamFoundation.VersionControl.Common/: Microsoft.TeamFoundation.VersionControl.Common.csproj  Microsoft.TeamFoundation.VersionControl.Common.dll.sources
trunk/class/Microsoft.TeamFoundation.WorkItemTracking.Client/: AssemblyInfo.cs  ClientService.cs  Makefile  Microsoft.TeamFoundation.WorkItemTracking.Client.csproj  WorkItemStore.cs
trunk/class/Microsoft.TeamFoundation.WorkItemTracking.Common/: Makefile  Microsoft.TeamFoundation.WorkItemTracking.Common.csproj
trunk/class/MonoDevelop.TeamFoundation/: Makefile  MonoDevelop.TeamFoundation.csproj  TeamFoundationCommands.cs  TeamFoundationPad.cs
trunk/class/OpenTF.Common/: Keyring.cs  NoKeyring.cs  OpenTF.Common.csproj  TFCredential.cs
trunk/data/: ChangeLog  Makefile  tfs.pc.in
trunk/debian/: changelog  control  files  libopentf-cil.install  mono-teamfoundation-client.install  monodevelop-opentf.install  rules
trunk/docs/: asciidoc.conf  tf.txt
trunk/docs/examples/: ex02-map-workfold.sh  ex03-get-workfold.sh  ex04-add-files.sh  ex05-checkin-adds.sh  ex06-view.sh  ex07-rename-dirs.sh  ex07-rename-files.sh  ex09-delete-dirs.sh  ex09-delete-files.sh  ex10-diff-pending.sh  ex11-status.sh  ex12-checkin-deletes.sh  ex13-history.sh  ex17-delete-workspace.sh  run-examples.sh  run-tests.sh  t01-help-cmd.sh  t03-show-cmd.sh  t04-workfold-cmd.sh  t05-labels-cmd.sh  t08-properties-cmd.sh
trunk/tools/: ChangeLog  Makefile
trunk/tools/MonoDevelop.VersionControl.TeamFoundation/: ClientCertificatePasswordDialog.cs  Command.cs  CommandUpdate.cs  Gui.ClientCertificateDialog.cs  Gui.ClientCertificatePasswordDialog.cs  Gui.UserPasswordDialog.cs  MonoDevelop.VersionControl.TeamFoundation.addin.xml  MonoDevelop.VersionControl.TeamFoundation.dll.sources  README  SslServerTrustDialog.cs  TeamFoundationVersionControl.cs
trunk/tools/opentf/: BranchesCommand.cs  ChangesetCommand.cs  ChangesetDetailView.cs  ChangesetDiffView.cs  CheckoutCommand.cs  Command.cs  ConfigureCommand.cs  DiffCommand.cs  DirCommand.cs  DirectoryView.cs  Driver.cs  ExitCode.cs  (+25 more)
(+202 files in other folders)
